# ConcreteSTV

./: Cargo.toml  ElectionDatabase.md  ElectionRules.md  README.md  margins.md
Viewer/: Viewer.css  Viewer.html  Viewer.js  index.html  util.js
Viewer/NSWLGE2021/: index.html
Viewer/NSWLGE2021/changes/: Ballina - A Ward.vchange  Ballina - B Ward.vchange  Ballina Mayoral.vchange  Bathurst Regional.vchange  Bayside - Ward 1.vchange  Bayside - Ward 2.vchange  Bayside - Ward 3.vchange  Bayside - Ward 5.vchange  Bega Valley.vchange  Berrigan.vchange  Bogan.vchange  Byron.vchange  Cabonne.vchange  Camden - North Ward.vchange  Camden - South Ward.vchange  Canada Bay Mayoral.vchange  Canterbury-Bankstown - Bankstown Ward.vchange  Canterbury-Bankstown - Canterbury Ward.vchange  Canterbury-Bankstown - Revesby Ward.vchange  Canterbury-Bankstown - Roselands Ward.vchange  Carrathool - Ward A.vchange  City of Albury.vchange  City of Blacktown - Ward 3.vchange  City of Blacktown - Ward 5.vchange  City of Blue Mountains - Ward 1.vchange  City of Blue Mountains - Ward 4.vchange  City of Broken Hill Mayoral.vchange  City of Campbelltown.vchange  City of Cessnock - B Ward.vchange  City of Cessnock - C Ward.vchange  City of Cessnock - D Ward.vchange  City of Cessnock Mayoral.vchange  City of Coffs Harbour Mayoral.vchange  City of Griffith Mayoral.vchange  City of Griffith.vchange  City of Hawkesbury.vchange  City of Lake Macquarie - East Ward.vchange  City of Lismore Mayoral.vchange  City of Lithgow.vchange  City of Liverpool - North Ward.vchange  (+91 more)
act/: Cargo.toml  CasualVacanciesAmbiguities.md  HowToRunCasualVacancies.md
act/src/: lib.rs  parse.rs  test_act.rs
act/tests/: act_official_dop_consistency.rs  test_act.rs  test_act_casual_vacancy.rs
docs/: Viewer.css  Viewer.html  Viewer.js  index.html  util.js
docs/NSWLGE2021/: index.html
docs/NSWLGE2021/changes/: Armidale Regional.vchange  Ballina - A Ward.vchange  Ballina - B Ward.vchange  Ballina - C Ward.vchange  Ballina Mayoral.vchange  Bathurst Regional.vchange  (+254 more)
examples/: Cargo.toml  DummyFirstPreference.stv  DummyFirstPreference2.stv  DummyFirstPreferenceAlternative.stv  DummyFirstPreferenceAlternative2.stv  Federal Senate 2013 Vic.md  FiveQuotasDoesntMeanFourSeats.stv  FourQuotasDoesntMeanFourSeats.stv  MultipleExclusionOrdering.stv  MultipleExclusionRounding.stv  NegativeTransferValue.stv  NegativeTransferValueCausingElectionOnNegativeTally.stv  SimpleExample.md  SimpleExample.stv  TransferValueOverOne.stv  WinByGivingAwayVotes.stv  WinByGivingAwayVotesAlternative.stv
examples/src/: example_datasource.rs  lib.rs
federal/: Cargo.toml
federal/benches/: parse_benchmark.rs
federal/examples/: compare_federal.rs  consider_more_wa2013_votes_just_like_provided_ones.rs  federal.rs
federal/legislation/: AssuranceOfSenateCountingAct2021.md  Copyright.md
federal/src/: lib.rs  parse.rs  parse2013.rs  test_federal.rs
federal/tests/: federal_official_dop_consistency.rs  official_dop_consistency.rs  test_federal.rs
main-app/: Cargo.toml
main-app/examples/: compare_lots_of_elections_lots_of_rules.rs  compare_rules.rs  nsw2021_ivote_changes.rs
main-app/src/: compare_different_rules.rs  ec_data_source.rs  lib.rs  main.rs  rules.rs
margin/: Cargo.toml
margin/src/: choose_votes.rs  evaluate_and_optimize_vote_changes.rs  find_outcome_changes.rs  lib.rs  record_changes.rs  retroscope.rs  vote_changes.rs
margin/tests/: test_retroscope.rs
minimal/: Cargo.toml
minimal/src/: lib.rs  parse_minimal.rs
nsw/: Cargo.toml  NSWLocalCouncilLegislation2021.md  NSWLocalCouncilLegislation2021Commentary.md  parse_ec_data_lge.md
nsw/examples/: compare_to_without_ivote.rs  consider_more_ivotes_just_like_provided_ones.rs  putative_lost_ivotes.csv  run_randomized_election_lots_of_times.rs
nsw/src/: NSWLGE2012_contest_list.json  NSWLGE2016_contest_list.json  NSWLGE2017_contest_list.json  NSWLGE2021_contest_list.json  NSWLGE2024_contest_list.json  lib.rs  nsw_random_rules.rs  parse_lc.rs  parse_lge.rs  run_election_multiple_times.rs  test_nsw_lge.rs
nsw/tests/: test_nsw_lc.rs  test_nsw_lge.rs  test_nsw_lge_2012.rs  test_nsw_lge_2016.rs  test_nsw_lge_2017.rs  test_nsw_lge_2021.rs  test_nsw_lge_2024.rs
preflib/: Cargo.toml
preflib/src/: lib.rs  parse_blt.rs
sa/: Cargo.toml
sa/src/: lib.rs  parse_sa.rs  parse_sa_lge.rs  pdf_util.rs
sa/tests/: sa_check_parsing.rs  sa_test_lge.rs
statistics/: Cargo.toml
statistics/src/: correlations.rs  dendrogram.rs  errors_btl.rs  find_vote.rs  intent_table.rs  lib.rs  mean_preference.rs  simple_statistics.rs  util.rs  who_got_votes.rs
statistics/tests/: test_dendrogram.rs  test_federal_2016.rs  test_statistics_for_federal_2016.rs
stv/: Cargo.toml
stv/src/: ballot_metadata.rs  ballot_paper.rs  ballot_pile.rs  compare_rules.rs  compare_transcripts.rs  datasource_description.rs  distribution_of_preferences_transcript.rs  download.rs  election_data.rs  errors_btl.rs  extract_votes_in_pile.rs  find_vote.rs  fixed_precision_decimal.rs  history.rs  lib.rs  monte_carlo.rs  official_dop_transcript.rs  parse_util.rs  preference_distribution.rs  random_util.rs  run_once_globally.rs  signed_version.rs  simple_list_of_votes.rs  tie_resolution.rs  transfer_value.rs  util.rs  verify_official_transcript.rs
vic/: Cargo.toml
vic/src/: lib.rs  parse_vic.rs
vic/tests/: test_upper.rs  vic_official_dop_consistency.rs
wa/: Cargo.toml
wa/src/: lib.rs  parse_wa.rs
wa/tests/: wa_check_parsing.rs  wa_official_dop_consistency.rs
webserver/: Cargo.toml
webserver/WebResources/ContestDirectory/: Correlations.html  IntentTable.html  MeanPreferences.html  PrepareVote.html  Recount.html  RepeatedNumbers.html  WhoGotVotes.html  index.html
webserver/WebResources/RootDirectory/: Contact.html  Copyright.html  Correlations.js  Differ.html  IntentTable.js  MeanPreferences.js  PrepareVote.js  Privacy.html  Recount.js  RepeatedNumbers.js  WhoGotVotes.js  common.css  common.js  contest_index.js  footer.html  header.html  index.html  index.js  util.js
webserver/src/: cache.rs  find_election.rs  main.rs
