

[workspace]

members= [
    "stv",
    "margin",
    "act",
    "federal",
    "nsw",
    "vic",
    "wa",
    "minimal",
    "sa",
    "examples",
    "statistics",
    "preflib",
    "main-app",
    "webserver"
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.bench]
lto="thin"

[profile.release]
lto="thin"