[package]
name = "main-app"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
federal = { path = "../federal" }
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
clap = "3.0.0-beta.4"