[package]
name = "main-app"
version = "0.2.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
federal = { path = "../federal" }
act = { path = "../act" }
margin = {path = "../margin" }
nsw = { path = "../nsw" }
vic = { path = "../vic" }
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
clap = {version= "4.2", features = ["derive"]}
num = {version="0.4", features=["serde"]}