[package]
name = "nsw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
anyhow = "1.0"
stv = { path = "../stv" }
zip = "0.6"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
scraper = "0.20"
rand = "0.8"
rand_chacha = "0.3"
calamine = "0.19"
url = "2.3"
regex = "1.7"