[package]
name = "nsw"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
anyhow = "1.0"
stv = { path = "../stv" }
zip = "~2.5"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
scraper = "0.23"
rand = "0.9"
rand_chacha = "0.9"
calamine = "0.27"
url = "2.3"
regex = "1.7"