[package]
name = "preflib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
serde = {version="1.0.188", features = ["derive"]}
serde_json = "1.0"
clap = {version= "4.2", features = ["derive"]}