[package]
name = "sa"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
zip = "2.2"
csv = "1.3"
url = "2.5"
pdf = "0.8.1"
