[package]
name = "statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
num-traits = "0.2"
typed-arena = "2.0"

[dev-dependencies]
federal = { path = "../federal" }
