[package]
name = "stv"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
typed-arena = "2.0"
anyhow = "1.0"
num = {version="0.4", features=["serde"]}
reqwest = {version="0.11", features=["blocking"]}
once_cell = "1.9"
csv = "1.1"
rand = "0.8"
futures = "0.3"
async-std = "1.10"