[package]
name = "stv"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
typed-arena = "2.0"
anyhow = "1.0"
num = {version="0.4", features=["serde"]}
reqwest = {version="0.12.8", features=["blocking","gzip"]}
once_cell = "1.20"
csv = "1.3"
rand = "0.8"
rand_chacha = "0.3"
futures = "0.3"
async-std = "1.10"
thiserror = "2.0"
encoding_rs = "0.8"
