[package]
name = "vic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
anyhow = "1.0"
stv = { path = "../stv" }
calamine = "0.26"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
scraper = "0.23"
pdf = "0.7"
