[package]
name = "wa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
calamine = "0.26"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.3"
scraper = "0.23"
url = "2.5"
regex = "1.11"