[package]
name = "election_webserver"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
stv = { path = "../stv" }
federal = { path = "../federal" }
act = { path = "../act" }
margin = {path = "../margin" }
nsw = { path = "../nsw" }
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
clap = {version="3.0", features = ["derive"]}
num = {version="0.4", features=["serde"]}
statistics = { path = "../statistics" }
actix-web = "4.0"
actix-files = "0.6.2"
once_cell = "1.9"
cacache = "11.0"
main-app = { path = "../main-app" }